feat: local telemetry storage
